--- a/dockerfile Tomcat:8.0
+++ b/dockerfile Tomcat:8.0
@@ -1,6 +1,7 @@
 #----------------
 # the work project
-#-----------------
+#
+
 FROM tomcat:8.0
 EXPOSE 8080
 WORKDIR boxfuse
@@ -12,6 +13,7 @@ RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello boxfuse
 WORKDIR boxfuse 
 RUN mvn package
 RUN cp /usr/local/tomcat/project/target/hello-1.0.war /usr/local/tomcat/webapps
+RUN apt remove -y git maven && mc
 #--------------------
 # for the start dockerfile
 # docker run -d -p 8080:8080 name image
