--- a/bu/dockerfile
+++ b/bu/dockerfile
@@ -1,6 +1,6 @@
 #----------------
 # the work project
-#-----------------
+
 FROM tomcat:8.0
 EXPOSE 8080
 WORKDIR boxfuse
@@ -15,4 +15,4 @@ RUN cp /usr/local/tomcat/project/target/hello-1.0.war /usr/local/tomcat/webapps
 #--------------------
 # for the start dockerfile
 # docker run -d -p 8080:8080 name image
-#after in browser 23.12.32.44:8080/hello-1.0/
+# browser 23.12.32.44:8080/hello-1.0/
