--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ version: '1.1'
 services:
        dock:
         
-        build: ./dock
-          restart: always
-            build:  
-              context: ./home/ubuntu/dock/
+        build: dock
+          restart: always 
+              context: /home/ubuntu/dock/
                  dockerfile: dockerfile
+
