--- a/work/dockerfile
+++ b/work/dockerfile
@@ -8,11 +8,11 @@ RUN apt update
 RUN apt install -y default-jdk
 RUN apt install -y maven
 RUN apt install -y git
-RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello boxfuse 
-WORKDIR boxfuse 
+RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello /home/boxfuse/
+WORKDIR /home/boxfuse 
 RUN mvn package
-RUN cp /usr/local/tomcat/project/target/hello-1.0.war /usr/local/tomcat/webapps
+RUN cp /home/boxfuse/target/hello-1.0.war /usr/local/tomcat/webapps
 #--------------------
-# for the start dockerfile
+# start dockerfile
 # docker run -d -p 8080:8080 name image
 # browser 23.12.32.44:8080/hello-1.0/
