--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 #v3.8
+#docker-compose
 
 version: '3.8'
 services:
@@ -15,3 +16,4 @@ services:
      restart: always
    volumes:
       war_volume:
+# docker-compose up -d
